--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-cayman
 title: House Prices - Advanced Regression Techniques
-description: Predicting House Prices with XGBoost | Author: Thet Naing
-author: Thet Naing
+description: Predicting House Prices with XGBoost (Author: Thet Naing)
